--- a/css/site.css
+++ b/css/site.css
@@ -387,6 +387,12 @@ figure img {
     box-shadow: 1px 2px 5px black;
 }
 
+myimg {
+    width: 50%;
+}
+
+
+
 .org-src-container, pre.example {
     font-family: 'Roboto Mono', monospace;
     font-size: 14px;
